updated dependencies and removed repo maven.exasol.com (#38)
* updated dependencies and removed repo maven.exasol.com
* Fixed tests
* fixed code smell reported by sonar